--- a/client/public/styles.css
+++ b/client/public/styles.css
@@ -10,18 +10,36 @@ html{
 
 body{
     margin: 0;
+    background-color: rgb(34, 32, 44);
+    color: #fff;
 }
 
+button{
+    border: none;
+    cursor: pointer;
+    outline: none;
+}
+
+button:hover{
+    transform: scale(1.03);
+}
+
+button:active{
+    transform: scale(1);
+}
+
+/*#region LOGIN*/
 .login-container{
     height: 100vh;
     width: 100vw;
-    background-color: rgba(0,0,0,0.5);
+    background-color: rgba(0,0,0,0.8);
     display: flex;
     justify-content: center;
     align-items: center;
     position: fixed;
     top: 0;
     right: 0;
+    z-index: 999;
 }
 
 .login-content{
@@ -66,20 +84,152 @@ body{
 
 .login-content button{
     font-size: 16px;
-    border: none;
-    outline: none;
     padding: 3px 10px;
     margin-top: 10px;
-    cursor: pointer;
     box-shadow: 0 1px rgb(179, 179, 179);
 }
 
 .login-content button:hover{
     box-shadow: 0 1px rgb(80, 80, 80);
-    transform: scale(1.05);
 }
 
 .login-content button:active{
     box-shadow: 0 2px rgb(163, 163, 163);
-    transform: scale(1);
 }
+/*#endregion LOGIN*/
+
+header{
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: rgb(22, 21, 26);
+    position: relative;
+}
+
+header #btnLogout{
+    position: absolute;
+    right: 1rem;
+    padding: 1rem;
+    color: white;
+    background-color: rgb(126, 27, 27);
+}
+
+
+/*#region SECTION VISÃO GERAL */
+
+section.visao-geral{
+    padding: 5vh 10vw;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+}
+
+section.visao-geral .card{
+    display: flex;
+    flex-direction: column;
+    padding: 2rem;
+    margin: 10px;
+    border-radius: 5px;
+}
+
+section.visao-geral .card-title{
+    margin-bottom: 3px;
+}
+
+section.visao-geral .card-value{
+    font-weight: bold;
+    font-size: 22px;
+}
+
+
+/*#endregion SECTION VISÃO GERAL */
+
+/*#region SECTION MOVIMENTOS */
+section.movimentos {
+    padding: 1vh 10vw;
+}
+
+section.movimentos .botoes-movimentos{
+    width: 100%;
+    display: flex;
+    justify-content: center;
+}
+
+section.movimentos .botoes-movimentos button{
+    padding: 0.5rem 2rem;
+    margin: 0 1rem;
+    border-radius: 5px;
+    color: white;
+    background-color: rgb(128, 128, 128);
+    font-weight: bold;
+    font-size: 14px;
+}
+
+section.movimentos .form-movimentos{
+    width: 100%;
+    display: flex;
+    justify-content: center;
+}
+
+section.movimentos .form-movimentos button{
+    margin: 0 4px;
+    color: #fff;
+    padding: 0.3rem 0.8rem;
+    border-radius: 4px;
+}
+
+section.movimentos .form-movimentos button.movimentos-cancelar{
+    background-color: rgb(168, 60, 60);
+}
+
+section.movimentos .form-movimentos button.movimentos-confirmar{
+    background-color: rgb(74, 156, 111);
+}
+
+section.movimentos .form-movimentos input, section.movimentos .form-movimentos select{
+    margin: 0 4px;
+    outline: none;
+    padding: .2rem .5rem;
+    width: auto;
+}
+
+/*#endregion SECTION MOVIMENTOS */
+
+/*#region SECTION EXTRATO */
+
+section.extrato {
+    padding: 1vh 10vw;
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
+    flex-direction: column;
+}
+
+.table-extrato{
+    width: 50%;
+    border-spacing: 0;
+}
+
+.table-extrato tr:nth-child(even){
+    background-color: rgb(59, 55, 80);
+}
+
+.table-extrato tr:nth-child(odd){
+    background-color: rgb(46, 39, 82);
+}
+
+.table-extrato thead tr{
+    background-color: rgb(48, 45, 65)!important;
+}
+
+.table-extrato th, .table-extrato td{
+    text-align: left;
+    padding: .6rem .8rem;
+    
+  border: none;
+}
+
+
+
+/*#endregion SECTION EXTRATO */
